--- a/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/Components/Pages/Home.razor
@@ -59,7 +59,7 @@
 	</div>
 </div>
 
-<div class="section">
+@* <div class="section">
 	<h2 class="text">Featured</h2>
 	<p class="text">Explore our current list of trending games.</p>
 
@@ -92,7 +92,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> *@
 
 @code {
 	public List<Item> gameToShow;
