--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -33,6 +33,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product list
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="SalesListing">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> List for sale
+            </NavLink>
+        </div>
     </nav>
 </div>
 
