--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -9,7 +9,7 @@
 
     <main style="background-color:#212529;">
         <div class="top-row px-4" style="background-color:#212529;">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <a href="register" target="_blank">Register</a>
         </div>
 
         <article class="content px-4" id="bodybackground">
