--- a/BlazorApp/Components/_Imports.razor
+++ b/BlazorApp/Components/_Imports.razor
@@ -10,3 +10,4 @@
 @using BlazorApp.Components
 @using DomainModels
 @using BlazorApp.Components.ReusableComponents
+@inject Service.DatabaseService DB;
