--- a/BlazorApp/Components/Pages/ProductList.razor
+++ b/BlazorApp/Components/Pages/ProductList.razor
@@ -1,5 +1,5 @@
 ﻿@page "/productlist"
-@inject List<Item> allItems
+
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
 
@@ -15,7 +15,7 @@
     <Search OnSearch="HandleSearch" showSearch="@showSearch" searchText="@searchText"></Search>
 </div>
 
-<h5 class="productsCount">Total products: @allItems.Count</h5>
+<h5 class="productsCount">Total products: @DB.allItems.Count</h5>
 
 <div class="container">
     <Listing Games="gamesToShow" OnAddToFavorites="AddToFavorites"></Listing>
@@ -59,9 +59,9 @@
         }
 
         // Calculate items to show based on current page
-        gamesToShow = allItems.Skip((currentPage - 1) * itemsPerPage).Take(itemsPerPage).ToList();
+        gamesToShow = DB.allItems.Skip((currentPage - 1) * itemsPerPage).Take(itemsPerPage).ToList();
         // Calculate total pages
-        totalPages = (int)Math.Ceiling((double)allItems.Count / itemsPerPage);
+        totalPages = (int)Math.Ceiling((double)DB.allItems.Count / itemsPerPage);
     }
 
     private bool isUpdatingPage = false;
@@ -83,8 +83,8 @@
         isUpdatingPage = true;
 
         currentPage = page;
-        gamesToShow = allItems.Skip((currentPage - 1) * itemsPerPage).Take(itemsPerPage).ToList();
-        totalPages = (int)Math.Ceiling((double)allItems.Count / itemsPerPage);
+        gamesToShow = DB.allItems.Skip((currentPage - 1) * itemsPerPage).Take(itemsPerPage).ToList();
+        totalPages = (int)Math.Ceiling((double)DB.allItems.Count / itemsPerPage);
 
         // Get the current URL and parse its query string
         var uri = NavigationManager.ToAbsoluteUri(NavigationManager.Uri);
@@ -147,13 +147,13 @@
     if (string.IsNullOrWhiteSpace(searchText))
     {
         // Hvis søgefeltet er tomt, vis alle spillene igen
-        gamesToShow = allItems.Skip((currentPage - 1) * itemsPerPage).Take(itemsPerPage).ToList();
-        totalPages = (int)Math.Ceiling((double)allItems.Count / itemsPerPage);
+            gamesToShow = DB.allItems.Skip((currentPage - 1) * itemsPerPage).Take(itemsPerPage).ToList();
+            totalPages = (int)Math.Ceiling((double)DB.allItems.Count / itemsPerPage);
     }
     else
     {
         // Filtrer spillene baseret på, om de indeholder søgeteksten i gameTitle, uanset case
-        gamesToShow = allItems
+            gamesToShow = DB.allItems
             .Where(game => game.gameName.ToLower().Contains(searchText.ToLower()))
             .OrderBy(game => game.gameName)
             .ToList();
