--- a/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/Components/Pages/Home.razor
@@ -1,6 +1,5 @@
 ﻿@page "/"
 @using DomainModels
-@inject NavigationManager NavigationManager
 
 <PageTitle>Gamers Lounge</PageTitle>
 
@@ -58,97 +57,25 @@
 	</div>
 </div>
 
-<div class="section">
-	<h2 class="text">Featured</h2>
-	<p class="text">Explore our current list of trending games.</p>
+<CarouselProductCard pcGamesToShow="@pcGameToShow" psGamesToShow="@psGameToShow" xboxGamesToShow="@xboxGameToShow"></CarouselProductCard>
 
-	<div class="card-container">
-		<div class="card-bottom-section">
-			<div class="carousel">
-				@for (var i = 0; i < pcGameToShow.Count; i++)
-				{
-					var localIndex = i;
-					<div class="carousel-item @(currentIndexPC == i ? "active" : "")">
-						<div class="card-body-bottom" @onclick="@( () => HandleCardClick(pcGameToShow[localIndex].itemID))">
-							<h4>PC</h4>
-							<img src="./Picture/Temp_Picture.jpg" class="image" />
-							<h4 class="game-name">@pcGameToShow[localIndex].gameName</h4>
-							<p class="game-genre">@pcGameToShow[localIndex].genre</p>
-							<p class="game-price">€ @pcGameToShow[localIndex].price</p>
-						</div>
-					</div>
-				}
-			</div>
-		</div>
-		<div class="card-bottom-section">
-			@for (var i = 0; i < psGameToShow.Count; i++)
-			{
-				var localIndex = i;
-				<div class="carousel-item @(currentIndexPS == i ? "active" : "")">
-					<div class="card-body-bottom" @onclick="@( () => HandleCardClick(psGameToShow[localIndex].itemID))">
-						<h4>PS</h4>
-						<img src="./Picture/Temp_Picture.jpg" class="image" />
-						<h4 class="game-name">@psGameToShow[localIndex].gameName</h4>
-						<p class="game-genre">@psGameToShow[localIndex].genre</p>
-						<p class="game-price">€ @psGameToShow[localIndex].price</p>
-					</div>
-				</div>
-			}
-		</div>
-		<div class="card-bottom-section">
-			@for (var i = 0; i < xboxGameToShow.Count; i++)
-			{
-				var localIndex = i;
-				<div class="carousel-item @(currentIndexXBOX == i ? "active" : "")">
-					<div class="card-body-bottom" @onclick="@( () => HandleCardClick(xboxGameToShow[localIndex].itemID))">
-						<h4>XBOX</h4>
-						<img src="./Picture/Temp_Picture.jpg" class="image" />
-						<h4 class="game-name">@xboxGameToShow[localIndex].gameName</h4>
-						<p class="game-genre">@xboxGameToShow[localIndex].genre</p>
-						<p class="game-price">€ @xboxGameToShow[localIndex].price</p>
-					</div>
-				</div>
-			}
-		</div>
-	</div>
-</div>
 
 @code {
 	public List<PC_Game> pcGameToShow;
 	public List<XBOX_Game> xboxGameToShow;
 	public List<PS_Game> psGameToShow;
-	public int currentIndexPC = 0;
-	public int currentIndexPS = 0;
-	public int currentIndexXBOX = 0;
-	private System.Timers.Timer timer;
+
 
 	protected override void OnInitialized()
 	{
 		pcGameToShow = FiltreToPC_Games(DB.allItems);
 		psGameToShow = FiltreToPS_Games(DB.allItems);
 		xboxGameToShow = FiltreToXBOX_Games(DB.allItems);
-
-		timer = new System.Timers.Timer(8000);
-		timer.Elapsed += TimerElapsed;
-		timer.Start();
 	}
 
 	private void HandleCardClick(int gameID)
 	{
 		NavigationManager.NavigateTo($"/product/{gameID}");
-	}
-
-	private void TimerElapsed(object sender, System.Timers.ElapsedEventArgs e)
-	{
-		NextGame();
-		InvokeAsync(StateHasChanged);
-	}
-
-	private void NextGame()
-	{
-		currentIndexPC = (currentIndexPC + 1) % pcGameToShow.Count;
-		currentIndexPS = (currentIndexPS + 1) % psGameToShow.Count;
-		currentIndexXBOX = (currentIndexXBOX + 1) % xboxGameToShow.Count;
 	}
 
 	public List<PC_Game> FiltreToPC_Games(List<Item> games)
