--- a/BlazorApp/Components/_Imports.razor
+++ b/BlazorApp/Components/_Imports.razor
@@ -11,3 +11,4 @@
 @using DomainModels
 @using BlazorApp.Components.ReusableComponents
 @inject Service.DatabaseService DB;
+@inject NavigationManager NavigationManager
