--- a/BlazorApp/Components/ReusableComponents/CarouselProductCard.razor
+++ b/BlazorApp/Components/ReusableComponents/CarouselProductCard.razor
@@ -1,5 +1,93 @@
-﻿<h3>CarouselProductCard</h3>
+﻿<div class="section">
+	<h2 class="text">Featured</h2>
+	<p class="text">Explore our current list of trending games.</p>
+	<div class="card-container">
+		<div class="card-bottom-section">
+			<div class="carousel">
+				@for (var i = 0; i < pcGamesToShow.Count; i++)
+				{
+					var localIndex = i;
+					<div class="carousel-item @(currentIndexPC == i ? "active" : "")">
+						<div class="card-body-bottom" @onclick="@( () => HandleCardClick(pcGamesToShow[localIndex].itemID))">
+							<h4>PC</h4>
+							<img src="./Picture/Temp_Picture.jpg" class="image" />
+							<h4 class="game-name">@pcGamesToShow[localIndex].gameName</h4>
+							<p class="game-genre">@pcGamesToShow[localIndex].genre</p>
+							<p class="game-price">€ @pcGamesToShow[localIndex].price</p>
+						</div>
+					</div>
+				}
+			</div>
+		</div>
+		<div class="card-bottom-section">
+			@for (var i = 0; i < psGamesToShow.Count; i++)
+			{
+				var localIndex = i;
+				<div class="carousel-item @(currentIndexPS == i ? "active" : "")">
+					<div class="card-body-bottom" @onclick="@( () => HandleCardClick(psGamesToShow[localIndex].itemID))">
+						<h4>PS</h4>
+						<img src="./Picture/Temp_Picture.jpg" class="image" />
+						<h4 class="game-name">@psGamesToShow[localIndex].gameName</h4>
+						<p class="game-genre">@psGamesToShow[localIndex].genre</p>
+						<p class="game-price">€ @psGamesToShow[localIndex].price</p>
+					</div>
+				</div>
+			}
+		</div>
+		<div class="card-bottom-section">
+			@for (var i = 0; i < xboxGamesToShow.Count; i++)
+			{
+				var localIndex = i;
+				<div class="carousel-item @(currentIndexXBOX == i ? "active" : "")">
+					<div class="card-body-bottom" @onclick="@( () => HandleCardClick(xboxGamesToShow[localIndex].itemID))">
+						<h4>XBOX</h4>
+						<img src="./Picture/Temp_Picture.jpg" class="image" />
+						<h4 class="game-name">@xboxGamesToShow[localIndex].gameName</h4>
+						<p class="game-genre">@xboxGamesToShow[localIndex].genre</p>
+						<p class="game-price">€ @xboxGamesToShow[localIndex].price</p>
+					</div>
+				</div>
+			}
+		</div>
+	</div>
+</div>
 
 @code {
+	[Parameter]
+	public List<PC_Game> pcGamesToShow { get; set; }
 
+	[Parameter]
+	public List<XBOX_Game> xboxGamesToShow { get; set; }
+
+	[Parameter]
+	public List<PS_Game> psGamesToShow { get; set; }
+	
+
+	public int currentIndexPC = 0;
+	public int currentIndexPS = 0;
+	public int currentIndexXBOX = 0;
+	private System.Timers.Timer timer;
+
+	protected override void OnInitialized()
+	{
+		timer = new System.Timers.Timer(8000);
+		timer.Elapsed += TimerElapsed;
+		timer.Start();
+	}
+	private void HandleCardClick(int gameID)
+	{
+		NavigationManager.NavigateTo($"/product/{gameID}");
+	}
+	private void TimerElapsed(object sender, System.Timers.ElapsedEventArgs e)
+	{
+		NextGame();
+		InvokeAsync(StateHasChanged);
+	}
+
+	private void NextGame()
+	{
+		currentIndexPC = (currentIndexPC + 1) % pcGamesToShow.Count;
+		currentIndexPS = (currentIndexPS + 1) % psGamesToShow.Count;
+		currentIndexXBOX = (currentIndexXBOX + 1) % xboxGamesToShow.Count;
+	}
 }
