--- a/BlazorApp/Components/Pages/SalesListing.razor.css
+++ b/BlazorApp/Components/Pages/SalesListing.razor.css
@@ -17,40 +17,48 @@
     margin-top: 20px;
 }
 
+
+
 /* Stil for modal */
 .modal {
     display: none;
     position: fixed;
-    z-index: 9999;
+    padding: 20px;
+    border-radius: 10px;
+    z-index: 100;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(112, 110, 111, 0.8);
+}
+
+.modal:hover {
+    cursor: pointer;
 }
 
 /* Stil for modalinnhold */
 .modal-content {
-    background-color: #fefefe;
+    background-color: #b3b3b3;
+    z-index: 999;
     margin: 15% auto;
     padding: 20px;
-    border: 1px solid #888;
+    border: 1px solid #b3b3b3;
     width: 80%;
     max-width: 600px;
 }
 
-/* Stil for lukkeknapp */
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+.modal-content:hover{
+    cursor: default;
 }
 
-    .close:hover,
-    .close:focus {
-        color: black;
-        text-decoration: none;
-        cursor: pointer;
-    }
+#buttonContainer {
+    display: flex;
+    justify-content: center;
+    margin-top: 20 px;
+}
+
+#buttonContainer .btn {
+    margin: 0 5px;
+}
