--- a/BlazorApp/Components/Pages/SalesListing.razor.css
+++ b/BlazorApp/Components/Pages/SalesListing.razor.css
@@ -10,14 +10,26 @@
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    background-color: #b3b3b3
+    background-color: #b3b3b3;
+    position: relative;
+    z-index: 0;
 }
+
+
+
+.form-select {
+    box-shadow: 0.2rem 0.5rem 0.3rem rgba(0, 0, 0, 0.1); /* Legg til skygge */
+}
+
 
 .gameTitle {
     margin-top: 20px;
 }
 
-
+.btn {
+    display: flex;
+    align-items: center;
+}
 
 /* Stil for modal */
 .modal {
